--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
       </a>
       <address class="address header__address">
         <p>
-          <a class="phone__number" href="tel:+99995555555">+9 999 555 5555</a><br>
-          <a class="email" href="mailto:info@sobaka.ge">info@sobaka.ge</a><br>
+          <a class="contacs" href="tel:+99995555555">+9 999 555 5555</a><br>
+          <a class="contacs" href="mailto:info@sobaka.ge">info@sobaka.ge</a><br>
           наб. Принсенграхт 263- 265, Амстердам
         </p>
       </address>
@@ -42,12 +42,12 @@
         <div class="overlay"></div>
         <h1 class="cover__title">
           <span class="aligned-text">Оно</span>
-          <span class="aligned-text aligned-text_center">Тебе</span>
+          <span class="aligned-text aligned-text_center">Теб<span class="no-letter-spacing">е</span></span>
           <span class="aligned-text aligned-text_right">Над<span class="no-letter-spacing">о</span></span>
         </h1>
         <div class="cover__description">
           <p class="cover__description-text">Аукцион вещей, в которые никто не верил</p>
-          <button class="bet-button">Сделать ставку</button>
+          <button class="bet-button" type="button">Сделать ставку</button>
         </div>
       </section>
       <section class="lots" id="lots">
@@ -104,7 +104,7 @@
               <p>Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. 
                 Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря на критику, кажущуюся простоту 
                 или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил 
-                никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми. </p>
+                никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми.</p>
             </div>
           </div>
         </div>
@@ -113,8 +113,8 @@
     <footer class="footer">
       <address class="address footer__address">
         <p>
-          <a class="phone__number" href="tel:+99995555555">+9 999 555 5555</a><br>
-          <a class="email" href="mailto:info@sobaka.ge">info@sobaka.ge</a><br>
+          <a class="contacs" href="tel:+99995555555">+9 999 555 5555</a><br>
+          <a class="contacs" href="mailto:info@sobaka.ge">info@sobaka.ge</a><br>
           наб. Принсенграхт 263- 265, Амстердам
         </p>
       </address>
@@ -133,24 +133,24 @@
       </nav>
       <ul class="footer__social-list">
         <li class="footer__social-list-item">
-          <a class="footer__social-link" href="#0">
+          <a class="footer__social-link" href="#0" target="_blank">
             <img class="footer__social-icon"
                  src="images/yt.svg"
                  alt="Ссылка на Ютуб">
           </a>
         </li>
         <li class="footer__social-list-item">
-          <a class="footer__social-link" href="#0">
+          <a class="footer__social-link" href="#0" target="_blank">
             <img class="footer__social-icon"
                  src="images/vk.svg"
                  alt="Ссылка на ВК">
           </a>
         </li>
         <li class="footer__social-list-item">
-          <a class="footer__social-link" href="#0">
+          <a class="footer__social-link" href="#0" target="_blank">
             <img class="footer__social-icon"
                  src="images/pinterest.svg"
-                 alt="Ссылка на ВК">
+                 alt="Ссылка на Пинтерест">
           </a>
         </li>
       </ul>
